--- a/package.json
+++ b/package.json
@@ -44,12 +44,12 @@
     "geist": "^1.3.1",
     "genkit": "^1.6.2",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
-    "patch-package": "^8.0.0",
+    "next": "15.2.8",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
